# cloud-radar-hook-plugin-example

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
cloud_radar_hook_plugin_example/: __init__.py  example_plugin.py  template_hooks.py
cloud_radar_hook_plugin_example/resource_hooks/: s3_resource_hooks.py
tests/resource_hooks/s3/: s3_bucket_encryption_fail.yaml  s3_resource_pass.yaml  test_s3_resource_hooks.py
